--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,98 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 220 23.076923191547394% 94.90196108818054%; /* base */
+    --foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
+
+    --muted: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
+    --muted-foreground: 233 12.796208262443542% 41.372549533843994%; /* subtext1 */
+
+    --popover: 220 23.076923191547394% 94.90196108818054%; /* base */
+    --popover-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
+
+    --card: 220 23.076923191547394% 94.90196108818054%; /* base */
+    --card-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
+
+    --border: 225 13.55932205915451% 76.86274647712708%; /* surface1 */
+    --input: 225 13.55932205915451% 76.86274647712708%; /* surface1 */
+
+    --primary: 220 91.4893627166748% 53.921568393707275%; /* accent - Blue */
+    --primary-foreground: 220 23.076923191547394% 94.90196108818054%; /* base */
+
+    --secondary: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
+    --secondary-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
+
+    --accent: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
+    --accent-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
+
+    --destructive: 347 86.66666746139526% 44.11764740943909%; /* red */
+    --destructive-foreground: 220 21.95121943950653% 91.96078181266785%; /* mantle */
+
+    --success: 109 57.63546824455261% 39.803922176361084%; /* green */
+    --success-foreground: 220 23.076923191547394% 94.90196108818054%; /* base */
+
+    --ring: 234 16.022099554538727% 35.49019694328308%; /* text */
+
+    --radius: 0.5rem;
+
+    --chart-1: 347 86.66666746139526% 44.11764740943909%; /* red */
+    --chart-2: 183 73.86363744735718% 34.50980484485626%; /* teal */
+    --chart-3: 220 91.4893627166748% 53.921568393707275%; /* blue */
+    --chart-4: 35 76.98412537574768% 49.41176474094391%; /* yellow */
+    --chart-5: 109 57.63546824455261% 39.803922176361084%; /* green */
+  }
+  .dark {
+    --background: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+
+    --muted: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
+    --muted-foreground: 227 35.29411852359772% 80.0000011920929%; /* subtext1 */
+
+    --popover: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --popover-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+
+    --card: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --card-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+
+    --border: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
+    --input: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
+
+    --primary: 217 91.86992049217224% 75.88235139846802%; /* accent - Blue */
+    --primary-foreground: 240 21.052631735801697% 14.901961386203766%; /* base */
+
+    --secondary: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
+    --secondary-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+
+    --accent: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
+    --accent-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+
+    --destructive: 343 81.25% 74.90196228027344%; /* red */
+    --destructive-foreground: 240 21.311475336551666% 11.96078434586525%; /* mantle */
+
+    --success: 115 54.09836173057556% 76.07843279838562%; /* green */
+    --success-foreground: 240 21.052631735801697% 14.901961386203766%; /* base */
+
+    --ring: 226 63.93442749977112% 88.03921341896057%; /* text */
+
+    --chart-1: 343 81.25% 74.90196228027344%; /* red */
+    --chart-2: 170 57.35294222831726% 73.33333492279053%; /* teal */
+    --chart-3: 217 91.86992049217224% 75.88235139846802%; /* blue */
+    --chart-4: 41 86.04651093482971% 83.13725590705872%; /* yellow */
+    --chart-5: 115 54.09836173057556% 76.07843279838562%; /* green */
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
