:sparkles: implements dumb header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,24 @@ body {
     --chart-3: 220 91.4893627166748% 53.921568393707275%; /* blue */
     --chart-4: 35 76.98412537574768% 49.41176474094391%; /* yellow */
     --chart-5: 109 57.63546824455261% 39.803922176361084%; /* green */
+
+    --c-rosewater: 11 59% 67%;
+    --c-flamingo: 0 60% 67%;
+    --c-pink: 316 73% 69%;
+    --c-mauve: 266 85% 58%;
+    --c-red: 347 87% 44%;
+    --c-maroon: 355 76% 59%;
+    --c-peach: 22 99% 52%;
+    --c-yellow: 35 77% 49%;
+    --c-green: 109 58% 40%;
+    --c-teal: 183 74% 35%;
+    --c-sky: 197 97% 46%;
+    --c-sapphire: 189 70% 42%;
+    --c-blue: 220 91% 54%;
+    --c-lavender: 231 97% 72%;
+    --c-base: 220 23% 95%;
+    --c-mantle: 220 22% 92%;
+    --c-crust: 220 21% 89%;
   }
   .dark {
     --background: 240 21.052631735801697% 14.901961386203766%; /* base */
@@ -86,6 +104,24 @@ body {
     --chart-3: 217 91.86992049217224% 75.88235139846802%; /* blue */
     --chart-4: 41 86.04651093482971% 83.13725590705872%; /* yellow */
     --chart-5: 115 54.09836173057556% 76.07843279838562%; /* green */
+
+    --c-rosewater: 10 56% 91%;
+    --c-flamingo: 0 59% 88%;
+    --c-pink: 316 72% 86%;
+    --c-mauve: 267 84% 81%;
+    --c-red: 343 81% 75%;
+    --c-maroon: 350 65% 77%;
+    --c-peach: 23 92% 75%;
+    --c-yellow: 41 86% 83%;
+    --c-green: 115 54% 76%;
+    --c-teal: 170 57% 73%;
+    --c-sky: 189 71% 73%;
+    --c-sapphire: 199 76% 69%;
+    --c-blue: 217 92% 76%;
+    --c-lavender: 232 97% 85%;
+    --c-base: 240 21% 15%;
+    --c-mantle: 240 21% 12%;
+    --c-crust: 240 23% 9%;
   }
 }
 
